<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="enterAmount">Enter Dollar Amount</string>
    <string name="tipDisplay">"Tip is: "</string>
    <string name="customTip">Custom Tip</string>
    <string name="prcntSign">%</string>
    <string name="emptyString"></string>

</resources>
